Fix extra padding for comments block

--- a/src/less/Comment.less
+++ b/src/less/Comment.less
@@ -20,21 +20,22 @@ ol > li.cd-commentPart-last {
   list-style-image: none;
   padding-left: 1em;
   margin: 0 0 0 1em;
-  border-left: 1px solid #c8ccd1;
+  border: 1px solid #c8ccd1;
+  border-width: 0 0 0 1px;
 }
 
 .mw-content-ltr .cd-commentLevel.cd-commentLevel:not(ol) {
   padding-left: 1em;
+  padding-right: 0;
   margin: 0 0 0 1em;
-  border-left: 1px solid #c8ccd1;
-  border-right: 0;
+  border-width: 0 0 0 1px;
 }
 
 .mw-content-rtl .cd-commentLevel.cd-commentLevel:not(ol) {
+  padding-left: 0;
   padding-right: 1em;
   margin: 0 1em 0 0;
-  border-right: 1px solid #c8ccd1;
-  border-left: 0;
+  border-width: 0 1px 0 0;
 }
 
 dl.cd-commentLevel > dd {
